<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:text="@string/appName"
        android:textColor="#009688"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="64dp"
        android:layout_height="33dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvTxt1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ed_tableNo"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edTable"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#DD2C00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_text1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tableNo" />

    <Button
        android:id="@+id/btn_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_drink"
        app:layout_constraintStart_toEndOf="@+id/btn_meal"
        app:layout_constraintTop_toBottomOf="@+id/ed_tableNo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="339dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/orderMsg"
        android:textColor="#673AB7"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_meal" />

    <TextView
        android:id="@+id/tv_meal"
        android:layout_width="335dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/mainMeal"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_drink"
        android:layout_width="223dp"
        android:layout_height="163dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/drinkStatus"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_meal" />

</androidx.constraintlayout.widget.ConstraintLayout>